[BZ #9823]

2009-02-06  Ulrich Drepper  <drepper@redhat.com>
	[BZ #9823]
	* stdio-common/psignal.c (psignal): Fix test for empty string.